# Tsumiki

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE  PR_BREAKING_CHANGE.md  README.md  app.py  bar.py  colors.json  config.json  config.py  config.toml  doc.md  doc_gen.py  hydepanel.schema.json  icons.py  init.sh  main.css  main.py  pyproject.toml  release-please-config.json  renovate.json  renovate.json5  requirements.txt  ruff.toml  start.sh  theme.css  theme.json  todo.md  todo.txt  tsumiki.schema.json  utils.py  window_count.py
.github/workflows/: changelog.yml  codeql.yml  lock.yml  release.yml  sync-fork.yaml
assets/: emoji.json
assets/icons/: recording.json
assets/matugen/: tsumiki.css
assets/scripts/: barupdate.sh  cava.sh  hyprpicker.sh  (+6 more)
example/: config.json  config.toml  theme.json
modules/: __init__.py  app_launcher.py  bar.py  corners.py  desktop_clock.py  dock.py  notification.py  notification_pop_up.py  notifications.py  osd.py  overview.py  quotes.py  wallpaper.py
services/: __init__.py  battery.py  bluetooth.py  brightness.py  cache_notification.py  custom_notification.py  mpris.py  network.py  networkspeed.py  notification.py  power_profile.py  powerprofile.py  quotes.py  screen_record.py  screen_record.sh  screenrecord.py  update.sh  weather.py  wifi.py
shared/: __init__.py  animator.py  button_toggle.py  buttons.py  buttontoggle.py  calendar.py  cicrle_image.py  circle_image.py  collapsible_group.py  custom_button.py  custom_image.py  customimage.py  dbus_helper.py  dialog.py  grid.py  list.py  lottie.py  media.py  module_group.py  pop_over.py  pop_up.py  popover.py  popover_anim.py  popoverv1.py  popovev1.py  popup.py  popv1.py  scrollable_text.py  separator.py  setting_scale.py  submenu.py  switch.py  tagentry.py  widget_container.py  widget_groups.py
styles/: _settings.scss  app_launcher.scss  brightness.scss  calendar.scss  cliphist.scss  collapsible_group.scss  dashboard.scss  datemenu.scss  dock.scss  emoji.scss  energy.scss  kanban.scss  launcher.scss  main.css  main.scss  media.scss  module_group.scss  notification.css  notification.scss  osd.css  osd.scss  overview.css  overview.scss  player.scss  power.scss  quicksettings.scss  system_tray.scss  systray.css  systray.scss  taskbar.css  taskbar.scss  theme.css  theme.scss  variable.scss  variables.scss  volume.css  volume.scss  weather.scss  widget_group.scss  workspace.css  (+1 more)
tests/: test_functions.py
utils/: __init__.py  animator.py  app.py  bezier.py  colors.py  colorthief.py  config.py  config_watcher.py  constants.py  dbus_helper.py  exceptions.py  functions.py  icon_resolver.py  icons.py  monitors.py  occlusion.py  thread.py  types.py  utils.py  widget_config.py  widget_factory.py  widget_settings.py  widget_utils.py
widgets/: __init__.py  battery.py  bluetooth.py  brightness.py  calendar.py  cava.py  click_counter.py  clickcounter.py  cliphist.py  collapsible_group.py  corners.py  custom_button.py  dashboard.py  datetime.py  datetime_menu.py  datetimemenu.py  desktop_clock.py  emoji_picker.py  hypr_idle.py  hypr_picker.py  hypr_sunset.py  hypridle.py  hyprpicker.py  hyprsunset.py  kanban.py  kblayout.py  keyboard_layout.py  language.py  launcher.py  media.py  microphone.py  mpris.py  notification.py  ocr.py  overview.py  paneltoggle.py  player.py  power.py  power_button.py  powerbutton.py  (+24 more)
(+316 files in other folders)
