[project]
name = "Tsumiki"
version = "2.0.0"
description = "A semi-customizable bar written using the Fabric Widget System"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Rubin Bhandari", email = "roobin.bhandari@gmail.com" },
]

keywords = [
  "widgets",
  "gtk",
  "linux",
  "pygobject",
  "bar",
  "statusbar",
  "panel",
  "dock",
]

dependencies = [
    "click>=8.1.7",
    "fabric",
    "setproctitle>=1.3.4",
    "ijson>=3.4.0",
    "loguru>=0.7.2",
    "pillow>=11.3.0",
    "psutil>=6.1.0",
    "pycairo>=1.27.0",
    "PyGObject>=3.50.0",
    "PyGObject-stubs>=2.10.0",
    "pytomlpp>=1.0.13",
    "qrcode>=8.2",
    "requests>=2.32.4",
    "rlottie-python>=1.3.6",
    "setproctitle>=1.3.4"

]

classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Panel",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
select = ["E4", "E7", "E9", "F", "D101", "N", "SIM", "W", "PERF", "RUF", "I", "E"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[project.urls]
"Website" = "https://github.com/rubiin/Tsumiki/wiki"
"Documentation" = "https://github.com/rubiin/Tsumiki/wiki"
"Source" = "https://github.com/rubiin/Tsumiki"
"Bug Tracker" = "https://github.com/rubiin/Tsumiki/issues"
"Changelog" = "https://github.com/rubiin/Tsumiki/blob/master/CHANGELOG.md"
